# nixosConfig

./: .gitignore  .opencodeignore  .sops.yaml  AGENTS.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  SOPS.md  TOOLS.md  architect_hello.py  chained_output.py  crush.json  dual-model-proxy-async.py  dual-model-proxy.py  fix_ethereum_executor_v3.py  fix_ethereum_executor_v4.py  fix_ethereum_executor_v5.py  fix_ethereum_executor_v6.py  fix_ethereum_executor_v7.py  flake.nix  litellm-config.yaml  mock_server.js  openclaw-agent-interact.skill  output.py  push-to-cachix.nu  result  rewrite_commute.py  secrets.yaml  secrets_to_add.yaml  setup-nix-proxy.sh  starship.conf  test  update_bot.py  update_report_bot_v3.py
.tmp/: check_balances.py  list_usdc_products.py
breezy_src/: flake.nix  temp.txt
breezy_src/modules/XRLinuxDriver/modules/xrealInterfaceLibrary/examples/debug_cam/: CMakeLists.txt
certs/: fullchain1.pem  wildcard.picloud.crt  wildcard.rpi.cripz.crt
common/: home-KQ7DV474L1.nix  home-Sammys-MacBook-Pro.nix  home-common.nix  home-default.nix  home-entertainment.nix  home-filestore.nix  home-homebasewsl.nix  home-manager-config.nix  home-manager.nix  home-mothership.nix  home-oldboy.nix  home-server.nix  home-starship.nix  home-starshipwsl.nix  home-work.nix  home-wsl-common.nix  home.nix  omarchy-config.nix  pi-sd-card.nix  stylix-values.nix
dynamic-themes/: theme-switcher.sh
homeManagerModules/: KQ7DV474L1.nix  Sammys-MacBook-Pro.nix  aerospace.nix  ai-skills.nix  aider.nix  alacritty.nix  claude-code.nix  coinbase-cli.nix  coinbase-trader.nix  coinbase-trader.nix.bak  crush.nix  default.nix  desktop.nix  direnv.nix  filestore.nix  gemini-cli.nix  ghostty.nix  git.nix  home-common.nix  homebasewsl.nix  jj.nix  mangowc.nix  mods.nix  mothership.nix  neovim.nix  nixpkgs.nix  nushell.nix  openclaw.nix  opencode.nix  phar-bot.nix  phar-liquidity-bot.nix  picoclaw.nix  plasma.nix  pomodoro.nix  server.nix  starship.nix  starshipwsl.nix  startup-fix.nix  stylix.nix  theme-switcher.nix  (+10 more)
modules/: default.nix  options.nix
nixosModules/: cachix.nix  crush.nix  default.nix  desktop.nix  greetd.nix  hyprland.nix  hyprlock.nix  kdestuff.nix  networking.nix  options.nix  shell.nix  sops.nix  stylix.nix  (+5 more)
xr_driver_src/modules/xrealInterfaceLibrary/interface_lib/: CMakeLists.txt
xr_driver_src/modules/xrealInterfaceLibrary/interface_lib/include/: device_imu.h  imu_protocol.h
xr_driver_src/modules/xrealInterfaceLibrary/interface_lib/modules/xreal_one_driver/: Readme.md
xr_driver_src/modules/xrealInterfaceLibrary/interface_lib/modules/xreal_one_driver/src/: lib.rs
xr_driver_src/modules/xrealInterfaceLibrary/interface_lib/src/: imu_protocol_hid.c  imu_protocol_xo.c
(+127 files in other folders)
